<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.presto.dhara.creditcardapp.utils.Converters"/>
        <variable
            name="model"
            type="com.presto.dhara.creditcardapp.creditcard.viewmodel.CreditCardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_20"
        tools:context=".creditcard.view.CreditCardFragment">

        <TextView
            android:id="@+id/cc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            android:text="@string/app_name"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/cc_credit_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            android:inputType="number"
            android:hint="@string/cc_card_number"
            android:maxLength="19"
            android:text="@={Converters.convertLongToString(Converters.longBox(model.cardForm.details.cardNumber))}"
            app:onFocus="@{model.getCardNumberOnFocusChangeListener()}"
            app:error="@{model.cardForm.cardNumberError}"
            app:layout_constraintTop_toBottomOf="@+id/cc_title" />

        <EditText
            android:id="@+id/cc_credit_card_expiration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            android:inputType="date"
            android:hint="@string/cc_expiration_mm_yy"
            android:maxLength="5"
            android:text="@={model.cardForm.details.expirationDate}"
            app:onFocus="@{model.getExpirationDateOnFocusChangeListener()}"
            app:error="@{model.cardForm.expirationDateError}"
            app:layout_constraintTop_toBottomOf="@+id/cc_credit_card_number" />

        <EditText
            android:id="@+id/cc_credit_card_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            android:inputType="number"
            android:hint="@string/cc_cvv"
            android:maxLength="4"
            android:text="@={Converters.convertIntToString(Converters.intBox(model.cardForm.details.cvvNumber))}"
            app:onFocus="@{model.getCvvNumberOnFocusChangeListener()}"
            app:error="@{model.cardForm.cvvNumberError}"
            app:layout_constraintTop_toBottomOf="@+id/cc_credit_card_expiration" />

        <EditText
            android:id="@+id/cc_credit_card_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            android:inputType="textPersonName"
            android:hint="@string/cc_first_name"
            android:text="@={model.cardForm.details.firstName}"
            app:onFocus="@{model.getFirstNameOnFocusChangeListener()}"
            app:error="@{model.cardForm.firstNameError}"
            app:layout_constraintTop_toBottomOf="@+id/cc_credit_card_cvv" />

        <EditText
            android:id="@+id/cc_credit_card_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            android:inputType="textPersonName"
            android:hint="@string/cc_last_name"
            android:text="@={model.cardForm.details.lastName}"
            app:onFocus="@{model.getLastNameOnFocusChangeListener()}"
            app:error="@{model.cardForm.lastNameError}"
            app:layout_constraintTop_toBottomOf="@+id/cc_credit_card_first_name" />

        <Button
            android:id="@+id/cc_make_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            android:text="@string/cc_make_payment"
            android:onClick="@{() -> model.onButtonClick()}"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
